--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 	 </td>   
     </tr>
     </table>
-    <!--
+    <button onclick="window.location.href='index.html'">Refresh</button>
+    <button onclick="window.location.href='input.html'">Configure</button>
+    <button onclick="solve()">Solve</button>
+    <!-- 
     <table border="0">
 		<tr>
 			<td><button type="button" id="btn_satz1">1 </button></td>
@@ -82,7 +85,7 @@
 		<tr>
 		</tr>    
     </table>
-    -->
+     -->
 	  </div>   
     <script src="move.js"></script>
   </body>
