--- a/input.html
+++ b/input.html
@@ -36,7 +36,7 @@
 	   </tr>
 	 </table>
 	 <br>	 
-	 <button onclick="location.reload()">Refresh</button>
+	 <button onclick="location.reload()">Refresh</button><br><br>
 	 <form method="GET" action="index.html">
 	   <input type="hidden" value="foo" name="farben" id="kunterbunt" />
 	   <input type="submit" value="OK">
