--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>En Cube 3x3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="index.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="myframe">
@@ -56,8 +56,8 @@
 	 <table>
 	 <tr>
 	 <td>
-    <input type="radio" name="notation" onclick="handleClick(this);" id='radio_normal' value="normal" checked>Notation normal<br>
-    <input type="radio" name="notation" onclick="handleClick(this);" value="en">Notation En
+    <input type="radio" name="notation" onclick="handleClick(this);" id='radio_normal' value="normal" >Notation normal<br>
+    <input type="radio" name="notation" onclick="handleClick(this);" id='radio_en'value="en" simplified(solution)>Notation En
 	 </td>
 	 <td>
     <input type="radio" name="ansicht" onclick="handleViewClick(this);" id='radio_3D' value="3D" checked>3D<br>
@@ -68,7 +68,7 @@
     <button onclick="window.location.href='index.html'">Refresh</button>
     <button onclick="window.location.href='input.html'">Configure</button>
     <button onclick="solve()">Solve</button>
-    <!-- 
+    <!--
     <table border="0">
 		<tr>
 			<td><button type="button" id="btn_satz1">1 </button></td>
@@ -85,9 +85,9 @@
 		<tr>
 		</tr>    
     </table>
-     -->
+    -->
 	  </div>   
-    <script src="move.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
