--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	 <tr>
 	 <td>
     <input type="radio" name="notation" onclick="handleClick(this);" id='radio_normal' value="normal" >Notation normal<br>
-    <input type="radio" name="notation" onclick="handleClick(this);" id='radio_en'value="en" simplified(solution)>Notation En
+    <input type="radio" name="notation" onclick="handleClick(this);" id='radio_en'value="en" checked>Notation En
 	 </td>
 	 <td>
     <input type="radio" name="ansicht" onclick="handleViewClick(this);" id='radio_3D' value="3D" checked>3D<br>
